--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -17,3 +17,16 @@
   font-family: "Montserrat Alternates3";
   src: url("/assets/MontserratAlternate3.ttf") format("truetype");
  };
+
+
+@font-face {
+  font-family: "Kedebideri-Black";
+  src: url("/assets/MontserratAlternate2.ttf") format("truetype");
+ };
+
+@font-face {
+  font-family: "Kedebideri-Regular";
+  src: url("/assets/Kedebideri-Regular.ttf") format("truetype");
+ };
+
+
