--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -76,20 +76,8 @@ p {
   font-size: 23px;
   fill: var(--color-chart-axis);
   font-family: "Montserrat Alternates3", sans-serif;
-  margin-bottom: 8px;
   padding: 0px;
-  margin: 2px 0 0;
-}
-
-.text-medium {
-  font-family: "Montserrat Alternates2", sans-serif;
-  color: var(--color-global);
-  font-size: 19px;
-  line-height: 1.5;
-  hyphens: auto;
-  text-align: left;
-  word-spacing: 0.25em;
-  letter-spacing: -0.39px;
+  margin: 0.3em 0 0;
 }
 
 .text-medium-scroller {
@@ -232,10 +220,6 @@ p {
     font-family: "Montserrat Alternates3", sans-serif;
   }
 
-  .text-medium {
-    font-size: 17px;
-  }
-
   .text-medium-scroller {
     font-size: 16px;
     line-height: 1.4;
@@ -251,10 +235,6 @@ p {
 @media screen and (max-width: 768px) {
   .text-big {
     font-size: 28px;
-  }
-
-  .text-medium {
-    font-size: 16px;
   }
 
   .text-medium-scroller {
@@ -291,10 +271,6 @@ p {
     line-height: 1.3;
   }
 
-  .text-medium {
-    font-size: 14px;
-  }
-
   .text-small {
     font-size: 11px;
   }
@@ -315,10 +291,6 @@ p {
   .text-medium-scroller {
     font-size: 11px;
     line-height: 1.25;
-  }
-
-  .text-medium {
-    font-size: 13px;
   }
 
   .text-small {
