1. readabilty 2. icon positioning

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -50,7 +50,7 @@ p {
   --color-background: #020b0c;
   --color-annotation-background: rgba(2, 11, 12, 0.5);
   --color-chart-axis: #d7dcf0;
-  --color-global: #eef0fd;
+  --color-global: #E5E6ED;
   --color-europe: #53e3ef;
   --color-asia: #bdea00;
   --color-usa: #9ab6ff;
