--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -46,11 +46,10 @@ p {
 /*--------------------------------------*/
 
 :root {
-  --color-background2: #051f22;
   --color-background: #020b0c;
   --color-annotation-background: rgba(2, 11, 12, 0.5);
   --color-chart-axis: #d7dcf0;
-  --color-global: #E5E6ED;
+  --color-global: #e5e6ed;
   --color-europe: #53e3ef;
   --color-asia: #bdea00;
   --color-usa: #9ab6ff;
@@ -110,7 +109,7 @@ p {
 }
 
 .highlight {
-  background: var(--color-background2);
+  background: var(--color-background);
   font-family: "Montserrat Alternates3", sans-serif;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px;
@@ -194,18 +193,6 @@ p {
     font-size: 36px;
   }
 
-  .text_scroll_title {
-    font-size: 20px;
-    line-height: 1.6;
-    fill: var(--color-chart-axis);
-    font-family: "Montserrat Alternates3", sans-serif;
-  }
-
-  .text-medium-scroller {
-    font-size: 16px;
-    line-height: 1.4;
-  }
-
   .text-small {
     font-size: 14px;
   }
@@ -216,17 +203,6 @@ p {
 @media screen and (max-width: 768px) {
   .text-big {
     font-size: 28px;
-  }
-
-  .text-medium-scroller {
-    font-size: 15px;
-    line-height: 1.3;
-  }
-
-  .text_scroll_title {
-    font-size: 18px;
-    fill: var(--color-chart-axis);
-    font-family: "Montserrat Alternates3", sans-serif;
   }
 
   .text-small {
@@ -241,17 +217,6 @@ p {
     font-size: 24px;
   }
 
-  .text_scroll_title {
-    font-size: 14px;
-    fill: var(--color-chart-axis);
-    font-family: "Montserrat Alternates3", sans-serif;
-  }
-
-  .text-medium-scroller {
-    font-size: 12px;
-    line-height: 1.3;
-  }
-
   .text-small {
     font-size: 11px;
   }
@@ -262,16 +227,6 @@ p {
 @media screen and (max-width: 260px) {
   .text-big {
     font-size: 24px;
-  }
-
-  .text_scroll_title {
-    font-size: 13px;
-    line-height: 1.1;
-  }
-
-  .text-medium-scroller {
-    font-size: 11px;
-    line-height: 1.25;
   }
 
   .text-small {
