--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -48,8 +48,8 @@ h6 {
   --color-global: #e5e6ed;
   --color-europe: #00FF9C;
   --color-asia: #bdea00;
-  --color-usa:  #FF1686;
-  --color-south-america: #FFD65A;
+  --color-usa: #b7F0FF; 
+  --color-south-america: #FF1686;
   --color-africa: #8af8cc;
   --color-link-hover: #4c8ffe;
 }
