--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -44,9 +44,9 @@ h6 {
   --color-annotation-background: rgba(2, 11, 12, 0.7);
   --color-chart-axis: #d7dcf0;
   --color-global: #e5e6ed;
-  --color-europe: #00FF9C;
+  --color-europe: #00ff9c;
   --color-asia: #bdea00;
-  --color-usa: #b7F0FF; 
+  --color-usa: #b7f0ff;
   --color-south-america: #ff00b7;
   --color-africa: #8af8cc;
   --color-link-hover: #4c8ffe;
@@ -85,6 +85,26 @@ h6 {
   text-align: left;
 }
 
+.footer-text {
+  font-family: "Montserrat Alternates2", sans-serif;
+  color: var(--color-chart-axis);
+  font-size: 0.6em;
+  margin-bottom: 5px;
+  line-height: 1.3em;
+  hyphens: auto;
+  text-align: left;
+}
+
+.footer-title {
+  font-family: "Montserrat Alternates SemiBold", sans-serif;
+  color: var(--color-chart-axis);
+  font-size: 0.6em;
+  margin-bottom: 0.6em;
+  line-height: 1em;
+  hyphens: auto;
+  text-align: left;
+}
+
 .heading {
   margin-top: 24px;
   position: relative;
@@ -112,13 +132,15 @@ h6 {
 .fn {
   position: relative;
   cursor: pointer;
-  font-size: 0.8em;
   vertical-align: super;
 }
 
 .fn sup {
   font-size: 0.7em;
+  vertical-align: top;
+  line-height: -0.5em;
   font-family: "Montserrat Alternates3", sans-serif;
+  vertical-align: -0.5em;
 }
 
 /* Tooltip bubble */
@@ -131,10 +153,10 @@ h6 {
   max-width: 400px;
   padding: 0.6em 0.8em;
   border-radius: 6px;
-  background: rgb(10, 97, 103, 0.9);
+  background: rgb(10, 97, 103, 0.8);
   color: var(--color-chart-axis);
   font-size: 0.8em;
-  line-height: 1.3;
+  line-height: 1;
   box-shadow: 0 4px 12px rgb(10, 97, 103, 0.3);
   opacity: 0;
   pointer-events: none;
@@ -145,19 +167,6 @@ h6 {
   z-index: 10;
 }
 
-/* Small arrow below tooltip */
-.fn::before {
-  content: "";
-  position: absolute;
-  left: 8px;
-  bottom: 1.1em;
-  border-width: 6px;
-  border-style: solid;
-  border-color: rgb(10, 97, 103, 0.85) transparent transparent transparent;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 150ms ease-out;
-}
 
 /* Show tooltip on hover or keyboard focus */
 .fn:hover::after,
